--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="right">
                     <div class="para">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, qui praesentium quidem aperiam harum omnis veniam sapiente ratione quae porro, non fuga vero debitis soluta corporis sunt deleniti molestiae iste.
+                       I'm a passionate web developer, I spend my days crafting immersive web experiences and exploring the latest trends and technologies that shape the digital landscape. My love for coding and all things web-related knows no bounds, and I'm here to share my knowledge, insights, and experiences with you.
                     </div>
                     <div class="username">
                       <h1>~Bhupendra Jogi 1</h1> 
@@ -114,7 +114,7 @@
               </div>
               <div class="right">
                   <div class="para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, qui praesentium quidem aperiam harum omnis veniam sapiente ratione quae porro, non fuga vero debitis soluta corporis sunt deleniti molestiae iste.
+                     I'm an app developer at Tech Insight Zone, where I have the privilege of creating innovative and user-friendly applications that have the power to transform the way we live, work, and play. My commitment to crafting amazing apps and my eagerness to share knowledge with the community is what drives me every day.
                   </div>
                   <div class="username">
                     <h1>~Bhupendra Jogi 2</h1> 
@@ -135,7 +135,7 @@
                 </div>
                 <div class="right">
                     <div class="para">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, qui praesentium quidem aperiam harum omnis veniam sapiente ratione quae porro, non fuga vero debitis soluta corporis sunt deleniti molestiae iste.
+                       My heart beats for creating stunning and user-centric web experiences. But my true calling lies in mentoring and guiding the next generation of young talents as they embark on their own front-end development odyssey.
                     </div>
                     <div class="username">
                       <h1>~Bhupendra Jogi 3</h1> 
@@ -156,7 +156,7 @@
                  </div>
                  <div class="right">
                      <div class="para">
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, qui praesentium quidem aperiam harum omnis veniam sapiente ratione quae porro, non fuga vero debitis soluta corporis sunt deleniti molestiae iste.
+                         I'm a dedicated back-end developer, and my heart is split between crafting powerful web solutions and nurturing my lifelong passions for sports and music. Here, I aim to share the harmonious intersection of these diverse interests and provide you with a fresh perspective on the tech world.
                      </div>
                      <div class="username">
                        <h1>~Bhupendra Jogi 4</h1> 
@@ -177,7 +177,7 @@
                </div>
                <div class="right">
                    <div class="para">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, qui praesentium quidem aperiam harum omnis veniam sapiente ratione quae porro, non fuga vero debitis soluta corporis sunt deleniti molestiae iste.
+                     As a dedicated social media manager at Tech Insight Zone, my passion lies in crafting a loving and engaging digital image for our tech community. I thrive on creating meaningful connections and ensuring that our content resonates with audiences far and wide. 
                    </div>
                    <div class="username">
                      <h1>~Bhupendra Jogi 5</h1> 
