--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="blogsContent">
                 <div class="left">
-                    <img src="m1.jpg" alt="">
+                    <img src="p1.png" alt="">
                 </div>
                 <div class="right">
                     <div class="para">
@@ -110,7 +110,7 @@
           </div>
           <div class="blogsContent">
               <div class="left">
-                  <img src="m2.jpg" alt="">
+                  <img src="p02.jpg" alt="">
               </div>
               <div class="right">
                   <div class="para">
@@ -131,7 +131,7 @@
             </div>
             <div class="blogsContent">
                 <div class="left">
-                    <img src="m3.jpg" alt="">
+                    <img src="p3.png" alt="">
                 </div>
                 <div class="right">
                     <div class="para">
@@ -152,7 +152,7 @@
              </div>
              <div class="blogsContent">
                  <div class="left">
-                     <img src="m4.jpg" alt="">
+                     <img src="p4.png" alt="">
                  </div>
                  <div class="right">
                      <div class="para">
@@ -173,7 +173,7 @@
            </div>
            <div class="blogsContent">
                <div class="left">
-                   <img src="m5.jpg" alt="">
+                   <img src="p5.png" alt="">
                </div>
                <div class="right">
                    <div class="para">
